codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__landing_motion_phase_18.snap
---
source: tui/src/history_cell/tests.rs
expression: styles
---
  │   ········  ········  ······    ······░░  ▒▒    ▓▓   │
  │   ·░······  ·····░··  ··░·····  ······░░  ▒▒    ▓▓   │
  │   ·░        ··    ··  ··    ░·  ··          ▒▓▓█     │
  │   ··        ··    ··  ··    ··  ······       ▓▓      │
  │   ·░        ··    ··  ··    ··  ······       ▓▓      │
  │   ·░        ··    ··  ··    ░·  ··          ▒▓▓█     │
  │   ········  ········  ········  ······░░  ▒▒    ▓▓   │
  │   ·░······  ·····░··  ··░···    ······░░  ▒▒    ▓▓   │
