codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__landing_session_header_adapts_to_narrow_width.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&lines).join(\"\\n\")"
---

    C O D E X

   gpt-5.6-sol
  a/…/directory

   ? shortcuts
