codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__landing_session_header_width_18.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&cell.display_lines(width)).join(\"\\n\")"
---
 ╭─────────────╮
 │             │
 │  C O D E X  │
 │             │
 │             │
 │ ? shortcuts │
 │             │
 ╰─────────────╯
