codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__landing_session_header_width_96.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&cell.display_lines(width)).join(\"\\n\")"
---
                ╭──────────────────────────────────────────────────────────────╮
                │                                                              │
                │       ████████  ████████  ██████    ████████  ██    ██       │
                │       ████████  ████████  ████████  ████████  ██    ██       │
                │       ██        ██    ██  ██    ██  ██          ████         │
                │       ██        ██    ██  ██    ██  ██████       ██          │
                │       ██        ██    ██  ██    ██  ██████       ██          │
                │       ██        ██    ██  ██    ██  ██          ████         │
                │       ████████  ████████  ████████  ████████  ██    ██       │
                │       ████████  ████████  ██████    ████████  ██    ██       │
                │                                                              │
                │                gpt-5.6-sol  ·  high  ·  fast                 │
                │                         /tmp/project                         │
                │                                                              │
                │           / commands      @ files      ? shortcuts           │
                │                                                              │
                ╰──────────────────────────────────────────────────────────────╯
