codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_info_first_event_landing_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&cell.display_lines(64)).join(\"\\n\")"
---
╭──────────────────────────────────────────────────────────────╮
│                                                              │
│       ████████  ████████  ██████    ████████  ██    ██       │
│       ████████  ████████  ████████  ████████  ██    ██       │
│       ██        ██    ██  ██    ██  ██          ████         │
│       ██        ██    ██  ██    ██  ██████       ██          │
│       ██        ██    ██  ██    ██  ██████       ██          │
│       ██        ██    ██  ██    ██  ██          ████         │
│       ████████  ████████  ████████  ████████  ██    ██       │
│       ████████  ████████  ██████    ████████  ██    ██       │
│                                                              │
│                     gpt-5.6-sol  ·  fast                     │
│                         /tmp/project                         │
│                                                              │
│           / commands      @ files      ? shortcuts           │
│                                                              │
╰──────────────────────────────────────────────────────────────╯
